# 1Optic-Tilburg

./: README.md
Rust/Actix issue/actix_users/: Cargo.toml
Rust/Actix issue/actix_users/.sqlx/: query-6710cbebde9d7a75a24810f01e35c14225aa27c8fd9918fad645f110abbc3c3b.json  query-adbef61a3289962f131d2d51a5ce7fbe149534a5f6dbb29b86472f35f1505c92.json
Rust/Actix issue/actix_users/src/: main.rs
Rust/Leptos_project/users/api/: .env  Cargo.toml
Rust/Leptos_project/users/api/src/: main.rs
Rust/Leptos_project/users/frontend/: Cargo.toml  index.html
Rust/Leptos_project/users/frontend/src/: main.rs
Rust/SPA_issue/: .gitattributes
Rust/SPA_issue/single_page_application/: .gitignore
