[package]
name = "actix_users"
version = "0.1.0"
edition = "2024"
sqlx-data-dir = ".sqlx"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }