[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Leptos client-side rendering
leptos = { version = "0.6.15", features = ["csr"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Response"] }

# Logging and panic hooks
console_error_panic_hook = "0.1.7"
console_log = "1.0"
log = "0.4"
